; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_read_blob_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_read_blob_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Subproject commit %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.strbuf*, %struct.object_id*, i32)* @read_blob_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_blob_object(%struct.strbuf* %0, %struct.object_id* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %5, align 8
  store %struct.object_id* %1, %struct.object_id** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i64 @S_ISGITLINK(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %3
  %15 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %16 = call i32 @strbuf_grow(%struct.strbuf* %15, i32 100)
  %17 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %18 = load %struct.object_id*, %struct.object_id** %6, align 8
  %19 = call i32 @oid_to_hex(%struct.object_id* %18)
  %20 = call i32 @strbuf_addf(%struct.strbuf* %17, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %34

21:                                               ; preds = %3
  %22 = load %struct.object_id*, %struct.object_id** %6, align 8
  %23 = call i8* @read_object_file(%struct.object_id* %22, i32* %8, i64* %9)
  store i8* %23, i8** %10, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %27, label %26

26:                                               ; preds = %21
  store i32 -1, i32* %4, align 4
  br label %35

27:                                               ; preds = %21
  %28 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = load i64, i64* %9, align 8
  %31 = load i64, i64* %9, align 8
  %32 = add i64 %31, 1
  %33 = call i32 @strbuf_attach(%struct.strbuf* %28, i8* %29, i64 %30, i64 %32)
  br label %34

34:                                               ; preds = %27, %14
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %26
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @S_ISGITLINK(i32) #1

declare dso_local i32 @strbuf_grow(%struct.strbuf*, i32) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32) #1

declare dso_local i32 @oid_to_hex(%struct.object_id*) #1

declare dso_local i8* @read_object_file(%struct.object_id*, i32*, i64*) #1

declare dso_local i32 @strbuf_attach(%struct.strbuf*, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
